WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73077
[CSS Filters] Filters do not render correctly when the layer has a transform
https://bugs.webkit.org/show_bug.cgi?id=73077
Summary
[CSS Filters] Filters do not render correctly when the layer has a transform
Alexandru Chiculita
Reported
2011-11-24 06:24:41 PST
Filters are not applied correctly when the layer has a transform. The current behavior is that it applies the transform inside the "filter area" resulting in clipped graphics. Moreover, the rootLayer is always passed as being the filtered layer, which is wrong. When there's no transform applied, the rootLayer should be just propagated. Otherwise the clipped rects are calculated incorrectly and an assert fires.
Attachments
Patch V1
(41.84 KB, patch)
2011-11-24 08:08 PST
,
Alexandru Chiculita
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexandru Chiculita
Comment 1
2011-11-24 06:25:11 PST
I think I have a fix for this one. I will post a patch soon.
Alexandru Chiculita
Comment 2
2011-11-24 08:08:17 PST
Created
attachment 116514
[details]
Patch V1
Dean Jackson
Comment 3
2011-11-28 23:37:38 PST
Comment on
attachment 116514
[details]
Patch V1 Thanks
WebKit Review Bot
Comment 4
2011-11-28 23:55:21 PST
Comment on
attachment 116514
[details]
Patch V1 Clearing flags on attachment: 116514 Committed
r101333
: <
http://trac.webkit.org/changeset/101333
>
WebKit Review Bot
Comment 5
2011-11-28 23:55:25 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug