[CSS Filters] Filters do not render correctly when the layer has a transform https://bugs.webkit.org/show_bug.cgi?id=73077

Reviewed by Dean Jackson.

Source/WebCore:

Corrected the root layer that was used when no transform was applied.
Using PaintLayerAppliedTransform when calling paintLayer again, to avoid
applying the transform inside the filter's graphics context. Now we apply that
on the result image.

Tests: css3/filters/filter-with-transform.html
       css3/filters/nested-filter.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::paintLayer):

LayoutTests:

* css3/filters/filter-with-transform-expected.png: Added.
* css3/filters/filter-with-transform-expected.txt: Added.
* css3/filters/filter-with-transform.html: Added.
* css3/filters/nested-filter-expected.png: Added.
* css3/filters/nested-filter-expected.txt: Added.
* css3/filters/nested-filter.html: Added.


Canonical link: https://commits.webkit.org/89814@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101333 268f45cc-cd09-0410-ab3c-d52691b4dbfc